fixed background issues when image too small

--- a/frontend/src/components/EntryForm/styles/EntryFormContent.module.css
+++ b/frontend/src/components/EntryForm/styles/EntryFormContent.module.css
@@ -1,10 +1,6 @@
 .form {
   width: 50%;
   margin: auto;
-  /* background: url("https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?size=626&ext=jpg&ga=GA1.1.1546980028.1702771200&semt=sph"); */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   border-radius: 20px;
   padding: 20px;
   text-align: center;
